changes are there done by kishore

--- a/sutharshini.html
+++ b/sutharshini.html
@@ -1,4 +1,19 @@
 <center>
   <h1> sutharshini is good </h1>
 </center>
-<br>
+<hr>
+<p>
+  determine the behaviour or supervise the running of:
+"he was appointed to control the company's marketing strategy"
+Similar:
+run
+manage
+direct
+administer
+head
+supervise
+
+(control for)
+take into account (an extraneous factor that might affect the results of an experiment):
+"no attempt was made to control for variations"
+</p>
